--- a/Ravlyk/Ravlyk/Views/OrderView.xaml
+++ b/Ravlyk/Ravlyk/Views/OrderView.xaml
@@ -2,12 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ravlyk.Views.OrderView" BackgroundColor="White"
-             xmlns:local="clr-namespace:Ravlyk.ViewModels;assembly=Ravlyk" >
+             xmlns:local="clr-namespace:Ravlyk.ViewModels;assembly=Ravlyk" Title="Кошик">
 
-  <ContentPage.ToolbarItems>
-    <ToolbarItem Text="Кошик"/>
-  </ContentPage.ToolbarItems>
-
+ 
   <StackLayout>
     <ListView ItemsSource="{Binding OrderItems}" HasUnevenRows="True" SelectedItem="Binding DeletedOrder" >
       <ListView.ItemTemplate>
