--- a/Ravlyk/Ravlyk.Droid/Resources/Layout/toolbar.axml
+++ b/Ravlyk/Ravlyk.Droid/Resources/Layout/toolbar.axml
@@ -4,16 +4,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:minHeight="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:layout_scrollFlags="scroll|enterAlways">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="#ffffff"
-        android:id="@+id/mytext"
-        android:textSize="18sp" />
-</android.support.v7.widget.Toolbar>
+    app:layout_scrollFlags="scroll|enterAlways" />
