--- a/Ravlyk/Ravlyk.Droid/Resources/Layout/toolbar.axml
+++ b/Ravlyk/Ravlyk.Droid/Resources/Layout/toolbar.axml
@@ -7,4 +7,15 @@
     android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:layout_scrollFlags="scroll|enterAlways" />
+    app:layout_scrollFlags="scroll|enterAlways">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="#ffffff"
+        android:id="@+id/mytext"
+        android:textSize="18sp" />
+
+
+      
+</android.support.v7.widget.Toolbar>
