--- a/Ravlyk/Ravlyk/Views/MenuPage.xaml
+++ b/Ravlyk/Ravlyk/Views/MenuPage.xaml
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ravlyk.Views.MenuPage">
-  <Label Text="ff" VerticalOptions="Center" HorizontalOptions="Center" />
+             x:Class="Ravlyk.Views.MenuPage"  BackgroundColor="#FF6666" WidthRequest="300">
+  <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
+    <Label Text="Клуб доставки їжі" FontSize="Large" TextColor="#fff"/>
+    <Label Text="12:00 - 22:00" FontSize="Large" TextColor="#fff"/>
+    <Label Text="+38 (073) 130-40-30" FontSize="Large" TextColor="#fff"/>
+    <Label Text="+38 (097) 130-40-30" FontSize="Large" TextColor="#fff"/>
+  </StackLayout>
 </ContentPage>
