--- a/Ravlyk/Ravlyk/Views/DishView.xaml
+++ b/Ravlyk/Ravlyk/Views/DishView.xaml
@@ -4,7 +4,7 @@
              x:Class="Ravlyk.Views.DishView" BackgroundColor="White"  Title="{Binding Title}">
 
   <ContentPage.ToolbarItems>
-    <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
+    <ToolbarItem Icon="{Binding Basket}" Command="{Binding ClickBasketCommand}"/>
   </ContentPage.ToolbarItems>
   <StackLayout HorizontalOptions="Center" >
 
