--- a/Ravlyk/Ravlyk/Views/OrderView.xaml
+++ b/Ravlyk/Ravlyk/Views/OrderView.xaml
@@ -50,13 +50,23 @@
       <Label Text="грн" FontSize="Medium"/>
 
     </StackLayout>
-    <StackLayout Orientation="Horizontal" VerticalOptions="End" Spacing="-10" HorizontalOptions="CenterAndExpand">
-      <Button Text="Очистити" BackgroundColor="#da4f49" TextColor="#ffffff" Command="{Binding ClearOrdersCommand}"
-             FontSize="Medium" WidthRequest="205" />
-      <Button Text="Замовити" BackgroundColor="#229ac8" TextColor="#ffffff" Command="{Binding ConfirmCommand}"
-            FontSize="Medium" WidthRequest="210" />
+    <Grid>
+      <Grid.ColumnDefinitions >
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <StackLayout Grid.Column="0" Grid.Row="0">
+        <Button Text="Очистити" BackgroundColor="#da4f49" TextColor="#ffffff" Command="{Binding ClearOrdersCommand}"
+                  FontSize="Medium" />
+      </StackLayout>
+      <StackLayout Grid.Column="1" Grid.Row="0" >
+        <Button Text="Замовити" BackgroundColor="#229ac8" TextColor="#ffffff" Command="{Binding ConfirmCommand}"
+            FontSize="Medium" />
+      </StackLayout>
 
-    </StackLayout>
+
+
+    </Grid>
 
   </StackLayout>
 
