--- a/Ravlyk/Ravlyk/Views/MainView.xaml
+++ b/Ravlyk/Ravlyk/Views/MainView.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ravlyk.Views.MainView" BackgroundColor="White">
+             x:Class="Ravlyk.Views.MainView" BackgroundColor="White" Title="Равлик">
 
   <ContentPage.ToolbarItems >
-    <ToolbarItem Icon="basket.png"/>
+    <ToolbarItem Icon="info.png" Command="{Binding ClickInfoCommand}"/>
+    <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
   </ContentPage.ToolbarItems>
 
-
+  <Label Text="Binding Internet" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/> 
   <ListView ItemsSource="{Binding Shops}" HorizontalOptions="CenterAndExpand"
             SelectedItem="{Binding SelectedShop}" HasUnevenRows="True">
     <ListView.ItemTemplate>
