--- a/Ravlyk/Ravlyk/Views/OrderView.xaml
+++ b/Ravlyk/Ravlyk/Views/OrderView.xaml
@@ -43,14 +43,15 @@
       </ListView.ItemTemplate>
 
     </ListView>
+    <Label Text="{Binding Text}" FontSize="Small" VerticalOptions="End" HorizontalOptions="Center"/>
     <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
 
       <Label Text="Усього:" FontSize="Medium"/>
       <Label Text="{Binding TotalPrice}" FontSize="Medium" />
       <Label Text="грн" FontSize="Medium"/>
-
+      
     </StackLayout>
-   
+    
 
     <Grid>
       <Grid.ColumnDefinitions>
@@ -58,10 +59,10 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
       <Grid.RowDefinitions>
-        <RowDefinition Height="*" /> 
+        <RowDefinition Height="*" />
       </Grid.RowDefinitions>
 
-        <Button Text="Очистити" BackgroundColor="#da4f49" TextColor="#ffffff" Command="{Binding ClearOrdersCommand}"
+      <Button Text="Очистити" BackgroundColor="#da4f49" TextColor="#ffffff" Command="{Binding ClearOrdersCommand}"
                FontSize="Medium" WidthRequest="205" Grid.Column="0" Grid.Row="0" />
         <Button Text="Замовити" BackgroundColor="#229ac8" TextColor="#ffffff" Command="{Binding ConfirmCommand}"
               FontSize="Medium" WidthRequest="210" Grid.Column="1" Grid.Row="0" />
