--- a/Ravlyk/Ravlyk/Views/ShopView.xaml
+++ b/Ravlyk/Ravlyk/Views/ShopView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ravlyk.Views.ShopView" BackgroundColor="White" Title="{Binding Shop.Title}">
   <ContentPage.ToolbarItems>
-    <ToolbarItem Icon="basket.png"/>
+    <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
   </ContentPage.ToolbarItems>
 
   <StackLayout>
