--- a/Ravlyk/Ravlyk/Views/DishView.xaml
+++ b/Ravlyk/Ravlyk/Views/DishView.xaml
@@ -22,7 +22,7 @@
       </StackLayout>
     </StackLayout>
 
-    <StackLayout Spacing="20">
+    <StackLayout Spacing="20" Padding="5,0">
       <Label Text="{Binding Dish.Description}" FontSize="Medium" TextColor="#666" HorizontalOptions="CenterAndExpand"/>
      
     </StackLayout>
