--- a/Ravlyk/Ravlyk/Views/CategoryView.xaml
+++ b/Ravlyk/Ravlyk/Views/CategoryView.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ravlyk.Views.CategoryView" BackgroundColor="White" Title="{Binding Category.Title}">
+             x:Class="Ravlyk.Views.CategoryView" BackgroundColor="White" Title="{Binding Title}">
 
   <ContentPage.ToolbarItems>
+    <ToolbarItem Icon="Favourite.png"/>
     <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
   </ContentPage.ToolbarItems>
 
