--- a/Ravlyk/Ravlyk/Views/FormView.xaml
+++ b/Ravlyk/Ravlyk/Views/FormView.xaml
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ravlyk.Views.FormView"  Title="Деталі Доставки">
+             x:Class="Ravlyk.Views.FormView"  Title="Деталі доставки">
   <StackLayout>
     <TableView>
       <TableView.Root>
         <TableRoot>
           <TableSection>
 
-            <EntryCell Keyboard="Default" Placeholder="Ваше ім'я" />
+            <EntryCell Keyboard="Default" Placeholder="Ваше ім'я" Text="{Binding UserName}"/>
 
-            <EntryCell Keyboard="Default" Placeholder="Адреса доставки" />
+            <EntryCell Keyboard="Default" Placeholder="Адреса доставки" Text="{Binding Adress}"/>
 
-            <EntryCell Keyboard="Email" Placeholder="Ваш email" />
+            <EntryCell Keyboard="Email" Placeholder="Ваш email"  Text="{Binding Email}"/>
 
-            <EntryCell Keyboard="Telephone" Placeholder="Ваш номер телефону" />
+            <EntryCell Keyboard="Telephone" Placeholder="Ваш номер телефону" Text="{Binding Phone}" />
           </TableSection>
         </TableRoot>
       </TableView.Root>
