--- a/Ravlyk/Ravlyk/Views/MainView.xaml
+++ b/Ravlyk/Ravlyk/Views/MainView.xaml
@@ -13,14 +13,14 @@
   <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
     <ListView ItemsSource="{Binding Shops}" HorizontalOptions="CenterAndExpand"
              SelectedItem="{Binding SelectedShop}" HasUnevenRows="True" IsRefreshing="{Binding IsRefreshing}"
-              IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}">
+              IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}" SeparatorVisibility="None">
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
             <ViewCell.View>
               <StackLayout Orientation="Horizontal" BackgroundColor="White" Padding="0,5">
                 <Image Source="{Binding ImagePath}" WidthRequest="200" HeightRequest="200" />
-                <StackLayout >
+                <StackLayout Padding="8,1">
                   <Label Text="{Binding Title}" TextColor="#444" FontSize="Large" FontFamily="Open Sans"/>
                   <Label Text="{Binding Address}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
 
@@ -33,9 +33,9 @@
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
-    <StackLayout  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">     
+    <StackLayout  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" WidthRequest="300">     
       <ActivityIndicator IsVisible="{Binding IsLoading}" IsRunning="{Binding IsLoading}"/>
-      <Label Text="Завантаження" IsVisible="{Binding IsLoading}" />
+      <Label Text="Завантаження" IsVisible="{Binding IsLoading}" FontSize="Large" HorizontalTextAlignment="Center"/>
     </StackLayout>
   
   </Grid>
