--- a/Ravlyk/Ravlyk/Views/ShopView.xaml
+++ b/Ravlyk/Ravlyk/Views/ShopView.xaml
@@ -1,29 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ravlyk.Views.ShopView" BackgroundColor="White" Title="{Binding Shop.Title}">
-  <ContentPage.ToolbarItems>
-    <ToolbarItem Icon="Favourite.png" Command="{Binding GetFavorCommand}"/>
-    <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
-  </ContentPage.ToolbarItems>
+             x:Class="Ravlyk.Views.ShopView" BackgroundColor="White" Title="Категорії продукції">
+	<ContentPage.ToolbarItems>
+		<ToolbarItem Icon="Favourite.png" Command="{Binding GetFavorCommand}"/>
+		<ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
+	</ContentPage.ToolbarItems>
 
-  <StackLayout>
-    <ListView ItemsSource="{Binding Shop.Categories}" SeparatorVisibility="None"
-             SelectedItem="{Binding SelectedCategory}" HasUnevenRows="True"
-             HorizontalOptions="CenterAndExpand">
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <ViewCell.View>
-              <StackLayout BackgroundColor="White" Padding="0,5">
-                <Image Source="{Binding ImagePath}" WidthRequest="200" HeightRequest="200" HorizontalOptions="CenterAndExpand"/>
-                <Label Text="{Binding Title}" FontSize="Large" HorizontalOptions="CenterAndExpand"/>
-              </StackLayout>
-            </ViewCell.View>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-  </StackLayout>
+	<StackLayout>
+		<Image Source="{Binding ShopImage}" WidthRequest="300" HorizontalOptions="CenterAndExpand"/>
+		<ListView ItemsSource="{Binding Categories}"
+				 SelectedItem="{Binding SelectedCategory}" HasUnevenRows="True"
+				 VerticalOptions="CenterAndExpand"
+				 HorizontalOptions="CenterAndExpand">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<ViewCell>
+						<ViewCell.View>
+							<StackLayout BackgroundColor="White" Padding="0,10">
+
+								<Label Text="{Binding Title}" FontSize="Large" HorizontalOptions="CenterAndExpand"/>
+							</StackLayout>
+						</ViewCell.View>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+	</StackLayout>
 
 </ContentPage>
