--- a/Ravlyk/Ravlyk/Views/MainView.xaml
+++ b/Ravlyk/Ravlyk/Views/MainView.xaml
@@ -3,42 +3,42 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ravlyk.Views.MainView" BackgroundColor="White" Title="Ravlyk Club">
 
-  <ContentPage.ToolbarItems >
-    <ToolbarItem Icon="info.png" Command="{Binding ClickInfoCommand}"/>
-    <ToolbarItem Icon="Favourite.png" Command="{Binding GetFavorCommand}"/>
-    <ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
-  </ContentPage.ToolbarItems>
+	<ContentPage.ToolbarItems >
+		<ToolbarItem Icon="info.png" Command="{Binding ClickInfoCommand}"/>
+		<ToolbarItem Icon="Favourite.png" Command="{Binding GetFavorCommand}"/>
+		<ToolbarItem Icon="basket.png" Command="{Binding ClickBasketCommand}"/>
+	</ContentPage.ToolbarItems>
 
 
-  <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-    <ListView ItemsSource="{Binding Shops}" HorizontalOptions="CenterAndExpand"
-             SelectedItem="{Binding SelectedShop}" HasUnevenRows="True" IsRefreshing="{Binding IsRefreshing}"
-              IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}">
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <ViewCell.View>
-              <StackLayout Orientation="Horizontal" BackgroundColor="White" Padding="0,5">
-                <Image Source="{Binding ImagePath}" WidthRequest="200" HeightRequest="200" Margin="5"/>
-                <StackLayout Padding="8,1">
-                  <Label Text="{Binding Title}" TextColor="#444" FontSize="Large" FontFamily="Open Sans"/>
-                  <Label Text="{Binding Address}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
+	<Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+		<ListView ItemsSource="{Binding Shops}" HorizontalOptions="CenterAndExpand" Margin="5,0"
+				 SelectedItem="{Binding SelectedShop}" HasUnevenRows="True" IsRefreshing="{Binding IsRefreshing}"
+				  IsPullToRefreshEnabled="True" RefreshCommand="{Binding RefreshCommand}">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<ViewCell>
+						<ViewCell.View>
+							<StackLayout Orientation="Horizontal" BackgroundColor="White" Padding="0,5">
+								<Image Source="{Binding ImagePath}" WidthRequest="200" HeightRequest="200" Margin="5"/>
+								<StackLayout Padding="8,1">
+									<Label Text="{Binding Title}" TextColor="#444" FontSize="Large" FontFamily="Open Sans"/>
+									<Label Text="{Binding Address}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
 
-                  <Label Text="{Binding Type}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
-                  <Label Text="{Binding Description}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
-                </StackLayout>
-              </StackLayout>
-            </ViewCell.View>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-    <StackLayout  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" WidthRequest="300">     
-      <ActivityIndicator IsVisible="{Binding IsLoading}" IsRunning="{Binding IsLoading}"/>
-      <Label Text="Завантаження" IsVisible="{Binding IsLoading}" FontSize="Large" HorizontalTextAlignment="Center"/>
-    </StackLayout>
-  
-  </Grid>
-  
-  
+									<Label Text="{Binding Type}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
+									<Label Text="{Binding Description}" TextColor="#666" FontSize="Small" FontFamily="Open Sans"/>
+								</StackLayout>
+							</StackLayout>
+						</ViewCell.View>
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
+		<StackLayout  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" WidthRequest="300">
+			<ActivityIndicator IsVisible="{Binding IsLoading}" IsRunning="{Binding IsLoading}"/>
+			<Label Text="Завантаження" IsVisible="{Binding IsLoading}" FontSize="Large" HorizontalTextAlignment="Center"/>
+		</StackLayout>
+
+	</Grid>
+
+
 </ContentPage>
